Added new /channel endpoint for registering a chatchannel, /connect is now only used to connect, hash is now only sent in base64 and never uri-encoded